# inference

./: .gitattributes  CMakeLists.txt  build.sh  inference_test.cc
camera_detection_multi_stage/: CMakeLists.txt  camera_detection_multi_stage_component.cc  camera_detection_multi_stage_component.h
camera_detection_multi_stage/conf/: camera_detection_multi_stage_config.pb.txt
camera_detection_multi_stage/dag/: camera_detection_multi_stage.dag
camera_detection_multi_stage/detector/yolo/: CMakeLists.txt  postprocess.cc  postprocess.cu  postprocess.h  yolo_obstacle_detector.cc  yolo_obstacle_detector.h
camera_detection_multi_stage/detector/yolo_bak/: CMakeLists.txt  object_maintainer.cc  object_maintainer.h  postprocess.cu  postprocess.cuaaa  postprocess.h  yolo_obstacle_detector.cc  yolo_obstacle_detector.h
cmake/: function_proto.cmake  options.cmake  process_proto.cmake
common/: CMakeLists.txt  perception_gflags.cc  util.cc
common/algorithm/: CMakeLists.txt
common/algorithm/io/: io_util.cc  io_util.h
common/algorithm/sensor_manager/: sensor_manager.cc  sensor_manager.h
common/base/: blob.cc  blob.h  box.h  camera.cc  concurrent_object_pool.h  distortion_model.cc  distortion_model.h  frame.h  frame_supplement.h  image.h  image_8u.h  impending_collision_edge.h  object.cc  object.h  object_pool_types.cc  object_pool_types.h  object_supplement.h  omnidirectional_model.cc  omnidirectional_model.h  point_cloud.h  polynomial.cc  radar_point_cloud.h  syncedmem.cc  syncedmem.h
common/camera/common/: data_provider.cc  data_provider.h  image_data_operations.cc  image_data_operations.h  undistortion_handler.cc  undistortion_handler.h  util.cc  util.h
common/inference/: CMakeLists.txt  inference.cc  inference.h  inference_factory.cc  inference_factory.h  model_util.cc  model_util.h
common/inference/libtorch/: torch_net.cc  torch_net.h
common/inference/onnx/: CMakeLists.txt  libtorch_obstacle_detector.back  libtorch_obstacle_detector.hback  onnx_single_batch_infer.cc  onnx_single_batch_infer.h
common/inference/tensorrt/: CMakeLists.txt  batch_stream.cc  batch_stream.h  entropy_calibrator.cc  entropy_calibrator.h  rt_common.cc  rt_common.h  rt_net.cc  rt_net.h  rt_utils.cc  rt_utils.h
common/inference/tensorrt/plugins/: CMakeLists.txt  argmax_plugin.cc  argmax_plugin.h  argmax_plugin_kernel.cu  argmax_plugin_kernel.h  build.sh  dfmb_psroi_align_plugin.cc  dfmb_psroi_align_plugin.h  dfmb_psroi_align_plugin_kernel.cu  dfmb_psroi_align_plugin_kernel.h  kernels.cu  kernels.h  leakyReLU_plugin.cc  leakyReLU_plugin.h  leakyReLU_plugin_kernel.cu  leakyReLU_plugin_kernel.h  nms_cuda.cu  rcnn_proposal_plugin.cc  rcnn_proposal_plugin.h  rcnn_proposal_plugin_kernel.cu  rcnn_proposal_plugin_kernel.h  rpn_proposal_ssd_plugin.cc  rpn_proposal_ssd_plugin.h  rpn_proposal_ssd_plugin_kernel.cu  rpn_proposal_ssd_plugin_kernel.h  slice_plugin.cc  slice_plugin.h  slice_plugin_kernel.cu  slice_plugin_kernel.h  softmax_plugin.cc  softmax_plugin.h
common/inference/utils/: CMakeLists.txt  cuda_util.cu  resize.cu  resize.h  util.cc  util.cu  util.h
common/interface/: base_obstacle_detector.cc  base_obstacle_detector.h
common/lib/: CMakeLists.txt
common/lib/interface/: CMakeLists.txt
common/lib/registerer/: registerer.cc
common/onboard/: CMakeLists.txt
common/onboard/inner_component_messages/: camera_detection_component_messages.h
data/models/apollo_bevnet_onnx/: apollo_bevnet.onnx
data/models/smoke_torch/: smoke_libtorch_model.pth
data/models/yolox3d_onnx/: yolo_libtorch_model_3d.pth  yolo_onnx_model_3d.onnx
others/: protobufConfig.cmake
proto/: camera_detection_multi_stage.proto  header.proto  model_param.proto  motion_service.proto  perception_ultrasonic.proto  sensor_image.proto
scripts/: set_runtime_env.sh
